<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:ignore="ContentDescription">

            <ImageView
                android:id="@+id/imgProduct"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:background="@android:color/white"
                android:padding="16dp"
                android:contentDescription="@string/product_image"
                tools:ignore="ContentDescription"
                android:src="@drawable/watch" />

            <ImageView
                android:id="@+id/btnHeart"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/product_favorite"
                android:src="@drawable/heart" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_product_name"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:maxLines="1"
            android:ellipsize="end"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/tvProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/sample_product_price"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                app:drawableStartCompat="@drawable/star"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:text="@string/sample_product_rating"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="12sp"/>
        </RelativeLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>